@@ -1,3 +1,9 @@
+2010-01-04  Jason Merrill  <jason@redhat.com>
+
+	PR c++/42567
+	* semantics.c (describable_type): Remove decltype comment and
+	semantics.
+
 
 
 Copyright (C) 2010 Free Software Foundation, Inc.
